<resources>
    <string name="app_name">NJ MASCOTS</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!--This is the list of all the id names for the Objects -->
    <string name="mascotHint">HINT</string>
    <string name="nextMascot">MASCOT</string>
    <string name="mascotAnswer">ANSWER</string>
    <string name="logoPlaceHolder">NJM</string>

    <!--The lit of strings for the ActionBar Icons -->
    <string name="mascotHintBar">MascotHint</string>
    <string name="mascotShareBar">MascotShare</string>
    <string name="mascotKnowBar">MascotPerson</string>

    <!--The rank of the player -->
    <string-array name="playerRank">
        <item>Beginner</item>
        <item>Advanced Beginner</item>
        <item>Medium</item>
        <item>Pro-Master</item>
        <item>Master</item>
    </string-array>

    <!--The list of Strings for Bar + Ranks + Points -->
    <string name="mascotLevel">LEVEL</string>
    <string name="mascotPoints">POINTS</string>
    <string name="mascotRank">RANK</string>
</resources>
